--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-     "name": "CTN-DeveresWeb",
-     "short_name": "CTN-DeveresWeb",
+     "name": "DeveresWeb",
+     "short_name": "DeveresWeb",
      "start_url": ".",
      "display": "standalone",
      "background_color": "#0175C2",
      "theme_color": "#0175C2",
-     "description": "A new Flutter project.",
+     "description": "Site para visualizar os deveres.",
      "orientation": "portrait-primary",
      "prefer_related_applications": false,
      "icons": [
